Update to NengoBones 57f40ff
80039f0 - NengoBones year update
7d0d54c - Upgrade black version to 21.12b0
378ad3d - Switch to new codecov uploader
57f40ff - Move license to top-level and add ABR license
30132c4 - Add proprietary license type
89f7a6f - Automatically fill in setup.py license fields
manual - Specify license explicitly

--- a/.nengobones.yml
+++ b/.nengobones.yml
@@ -4,6 +4,7 @@ repo_name: nengo/lmu
 description: LMU metapackage for installing various LMU implementations
 
 copyright_start: 2020
+license: abr-free
 
 license_rst: {}
 
@@ -20,7 +21,6 @@ setup_py:
   classifiers:
     - "Development Status :: 3 - Alpha"
     - "Intended Audience :: Science/Research"
-    - "License :: Free for non-commercial use"
     - "Operating System :: OS Independent"
     - "Programming Language :: Python "
     - "Programming Language :: Python :: 3.6"
